# periodic-timer-sample

./: .gitignore  CMakeLists.txt  README.md  analysis.py
bench/: CMakeLists.txt  main.cpp
data/: linux.csv  mac.csv  win_with_timebeginperiod.csv  win_without_timebeginperiod.csv
include/: std_sleep_timer.hpp  timer.hpp
include/mac/: gcd_timer.hpp
include/nix/: posix_timer.hpp
include/win/: multimedia_timer.hpp  performance_counter_soft_sleep_timer.hpp  threadpool_timer.hpp  timerqueue_timer.hpp  waitable_timer.hpp
